# ros-kuri-pkg

./: README.md  dqw
kuri_gripper/: CMakeLists.txt  package.xml
kuri_gripper/config/: joint_controllers.yaml
kuri_gripper/launch/: controller_manager.launch  controller_spawner.launch  gripper_controller.launch
kuri_gripper/src/: kuri_gripper.cpp
maps/: CMakeLists.txt  package.xml
maps/launch/: kuri_virtual_map.launch  kuri_virtual_map.launch~  obstacles.launch
maps/maps/: squared10by10.yaml
maps/src/: goal_listener.cpp  obstacle_listener.cpp  path_publisher.cpp  path_publisher.cpp~
mitsubishi_arm/mitsubishi_arm_description/robots/: mitsubishi_rv_6sdl.urdf.xacro
mitsubishi_arm/mitsubishi_arm_move/launch/: move_arm.launch
mitsubishi_arm_barret_hand/mitsubishi_arm_barrett_hand_description/: CMakeLists.txt  package.xml
mitsubishi_arm_barret_hand/mitsubishi_arm_barrett_hand_description/launch/: display.launch
mitsubishi_arm_barret_hand/mitsubishi_arm_barrett_hand_description/robots/: mitsubishi_rv_6sdl_barrett_hand.urdf.xacro
mitsubishi_arm_teleop/: CMakeLists.txt  CMakeLists.txt~  Teleop.cpp  package.xml  package.xml~
mitsubishi_arm_teleop/launch/: mitsubishi_teleop.launch  mitsubishi_teleop.launch~  mitsubishi_teleop_gazebo.launch  teleop_track.launch
mitsubishi_arm_teleop/src/: teleop.cpp  teleop.cpp_back
mitsubishi_barrett/mitsubishi_barrett_config/: .setup_assistant  CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_limits_gazebo.yaml  kinematics.yaml  mitsubishi_barrett.srdf  ompl_planning.yaml
mitsubishi_barrett/mitsubishi_barrett_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  mitsubishi_barrett_moveit_controller_manager.launch.xml  move_group.launch  move_group_gazebo.launch  moveit.launch  moveit.rviz  moveit_gazebo.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context_gazebo.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mitsubishi_barrett/mitsubishi_barrett_control/: CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_control/config/: mitsubishi_barrett_control.yaml  mitsubishi_barrett_control_gazebo.yaml
mitsubishi_barrett/mitsubishi_barrett_control/launch/: mitsubishi_barrett_control.launch  mitsubishi_barrett_control_gazebo.launch
mitsubishi_barrett/mitsubishi_barrett_description/: CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_description/launch/: display.launch
mitsubishi_barrett/mitsubishi_barrett_description/robots/: mitsubishi_barrett.urdf.xacro
mitsubishi_barrett/mitsubishi_barrett_gazebo/: CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_gazebo/launch/: barrett_hand_gazebo.launch  frames.gv  mitsubishi_barrett_gazebo.launch
mitsubishi_barrett/mitsubishi_barrett_gazebo/worlds/: mitsubishi_barrett_coke.world
mitsubishi_barrett/mitsubishi_barrett_hardware_interface/: CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_hardware_interface/include/mitsubishi_barrett_hardware_interface/: MitsubishiBarrettHardwareInterface.h
mitsubishi_barrett/mitsubishi_barrett_hardware_interface/launch/: mitsubishi_barrett_hardware_interface.launch
mitsubishi_barrett/mitsubishi_barrett_hardware_interface/src/: MitsubishiBarrettHardwareInterface.cpp  Robot.cpp  Robot_test.cpp
mitsubishi_barrett/mitsubishi_barrett_move/: CMakeLists.txt  package.xml
mitsubishi_barrett/mitsubishi_barrett_move/launch/: move_arm.launch
mitsubishi_rv_6sdl/mitsubishi_rv_6sdl_description/: CMakeLists.txt~  package.xml~
mitsubishi_rv_6sdl/mitsubishi_rv_6sdl_description/launch/: display.launch~
mitsubishi_rv_6sdl/mitsubishi_rv_6sdl_description/robots/: mitsubishi_6sdl_barret.urdf.xacro~  mitsubishi_rv_6sdl_barret.urdf.xacro~
mitsubishi_rv_6sdl/mitsubishi_rv_6sdl_description/urdf/: mitsubishi_rv_6sdl_arm.urdf.xacro~
owd_msgs/.svn/: all-wcprops  entries
owd_msgs/msg/.svn/: all-wcprops  entries
owd_msgs/srv/.svn/: all-wcprops  entries
qtcreator-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  navigation.cbp
qtcreator-build/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtcreator-build/catkin_generated/installspace/: _setup_util.py  navigation.pc  navigationConfig.cmake
qtcreator-build/devel/: .catkin  .rosinstall  setup.sh
qtcreator-build/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
quadrotor/quadrotor_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
quadrotor/quadrotor_control/include/quadrotor_control/: PoseController.h  PoseController.h~
quadrotor/quadrotor_control/src/: PoseController.cpp
quadrotor/quadrotor_description/: CMakeLists.txt  package.xml  package.xml~
quadrotor/quadrotor_description/launch/: display.launch  display.launch~
quadrotor/quadrotor_description/rviz/: ardrone.rviz
quadrotor/quadrotor_description/urdf/: quadrotor.urdf.xacro  quadrotor.urdf.xacro~  quadrotor_base.urdf.xacro~  quadrotor_sensors.urdf.xacro~
quadrotor/quadrotor_hardware_interface/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
quadrotor/quadrotor_hardware_interface/src/: ArdroneHardwareInterface.cpp~  QuadrotorHardwareInterface.cpp
seekur_jr_arm/seekur_jr/seekur_jr_control/: CMakeLists.txt~
seekur_jr_arm/seekur_jr_arm_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
seekur_jr_description/launch/: display.launch  display.launch~
seekur_jr_description/robots/: seekur.urdf.xacro~  seekur_jr_with_arm.gazebo~  seekur_jr_with_arm.urdf.xacro
seekur_jr_description/urdf/: common.xacro~  seekur_jr.gazebo~  seekur_jr.urdf.xacro  seekur_jr.urdf.xacro~
teleoperation/: CMakeLists.txt  package.xml
teleoperation/scripts/: cyber_glove_teleop.py
(+24 files in other folders)
