<package>
  <name>teleoperation</name>
  <version>0.0.0</version>
  <description>Provides teleoperation using Cyber glove</description>
  <maintainer email="rui.defigueiredo@kustar.ac.ae">Rui P. de Figueiredo</maintainer>
  <license>GNU</license>
  
  <author email="rui.defigueiredo@kustar.ac.ae">Tarek Taha and Rui P. de Figueiredo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
