<?xml version="1.0"?>
<package>
  <name>quadrotor_description</name>
  <version>0.0.0</version>
  <description>The quadrotor_description package</description>


  <maintainer email="rui@todo.todo">rui</maintainer>
  <license>TODO</license>
  <author email="jane.doe@example.com">Jane Doe</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
